# kiroclaw

./: .env.example  .gitignore  ADDON_ARCHITECTURE_PROPOSAL.md  Agent Client Protocol (ACP) - CLI - Docs - kiro.dev.md  CODE_REVIEW_REPORT.md  CONTAINER_ISOLATION_PROPOSAL.md  FINDINGS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROPOSAL_SUMMARY.md  README.md  REVIEW_SUMMARY.md  SECURITY_PROPOSAL.md  hello.py  main.py  pyproject.toml
.kiro/steering/: core-workflow.md  tech.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: unit1-foundation-code-generation-plan.md  unit1-functional-design-plan.md  unit2-session-persistence-code-generation-plan.md  unit2-session-persistence-functional-design-plan.md  (+8 more)
docs/: ADDON_ARCHITECTURE_DIAGRAMS.md  ADDON_EXECUTIVE_SUMMARY.md  ADDON_IMPLEMENTATION_GUIDE.md  PER_USER_ADDONS_TECHNICAL_SPEC.md  README.md
kiro-config/agents/: tg-acp.json
kiro-config/steering/: tg-acp-context.md
src/tg_acp/: __init__.py  acp_client.py  bot_handlers.py  config.py  file_handler.py  process_pool.py  provisioner.py  session_security.py  session_store.py  stream_writer.py
tests/: test_acp_client.py  test_acp_protocol.py  test_bot_handlers.py  test_config.py  test_pool_integration.py  test_process_pool.py  test_provisioner.py  test_session_continuity.py  test_session_security.py  test_session_store.py  test_stream_writer.py  test_tool_visibility_integration.py
(+37 files in other folders)
